--- a/src/components/pages/article-list/ArticleList.scss
+++ b/src/components/pages/article-list/ArticleList.scss
@@ -17,6 +17,16 @@
   display: flex;
   justify-content: space-between;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.15);
+
+  &__title-text {
+	transition: 0.5s;
+
+	&:hover {
+		transform: scale(0.9);
+	}
+  }
+
+  
 }
 
 .article-item__left {
@@ -39,12 +49,20 @@
   width: 16px;
   height: 16px;
   background: url('../../../assets/heart.svg') no-repeat center center;
+  transition: 0.5s;
+  &:hover {
+	transform: scale(0.9);
+  }
 }
 
 .article-item__liked--button {
   width: 16px;
   height: 16px;
   background: url('../../../assets/liked.svg') no-repeat center center;
+  transition: 0.5s;
+  &:hover {
+	transform: scale(0.9);
+  }
 }
 
 .article-item__tags {
@@ -59,6 +77,10 @@
   font-size: 12px;
   line-height: 100%;
   color: rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
+  &:hover {
+	transform: scale(0.9);
+  }
 }
 
 .article-item__right {
