--- a/src/components/pages/edit-article/EditArticle.scss
+++ b/src/components/pages/edit-article/EditArticle.scss
@@ -15,6 +15,10 @@
   line-height: 22px;
   color: #262626;
 
+  p{
+	margin: 0;
+  }
+
   &__tag-list {
     display: flex;
     flex-direction: column;
@@ -25,6 +29,7 @@
     text-align: center;
     font-family: 'Roboto-S', sans-serif;
     font-size: 20px;
+	 margin: 0;
   }
 
   &__title,
@@ -72,6 +77,10 @@
     border: 1px solid #f5222d;
     border-radius: 4px;
     color: #f5222d;
+	 transition: 0.5s;
+  &:hover {
+	transform: scale(0.9);
+  }
   }
 
   &__tag--add {
@@ -81,6 +90,10 @@
     border: 1px solid #1890ff;
     border-radius: 4px;
     color: #1890ff;
+	 transition: 0.5s;
+  &:hover {
+	transform: scale(0.9);
+  }
   }
 
   &__tags {
@@ -100,5 +113,9 @@
     vertical-align: middle;
     font-size: 16px;
     line-height: 24px;
+	 transition: 0.5s;
+  &:hover {
+	transform: scale(0.9);
+  }
   }
 }
