--- a/src/components/pages/profile/Profile.scss
+++ b/src/components/pages/profile/Profile.scss
@@ -15,6 +15,10 @@
   color: #262626;
   font-family: 'Roboto', sans-serif;
 
+  p {
+	margin: 0;
+  }
+
   h2 {
     font-family: 'Roboto-S', sans-serif;
     font-size: 20px;
@@ -41,5 +45,9 @@
     background-color: #1890ff;
     border-radius: 4px;
     color: #fff;
+	 transition: 0.5s;
+  &:hover {
+	transform: scale(0.9);
+  }
   }
 }
