--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -11,6 +11,10 @@ body {
   border: 1px solid #d9d9d9;
   border-radius: 4px;
   padding: 0 12px;
+
+  @media (max-width: 672px) {
+	height: 30px;
+  }
 }
 
 .checkbox {
