--- a/src/components/pages/profile/Profile.scss
+++ b/src/components/pages/profile/Profile.scss
@@ -42,6 +42,9 @@
     font-size: 16px;
     line-height: 24px;
     padding: 8px 16px;
+	 display: flex;
+	 justify-content: center;
+	 align-items: center;
     background-color: #1890ff;
     border-radius: 4px;
     color: #fff;
@@ -49,5 +52,22 @@
     &:hover {
       transform: scale(0.9);
     }
+  }
+
+  @media (max-width: 500px) {
+	width: 350px;
+	padding: 20px 15px;
+	gap: 15px;
+	h2 {
+		font-size: 16px;
+	}
+	
+	&__button {
+		width: 200px;
+		height: 30px;
+	}	
+	&__data {
+		gap: 7px;
+	}
   }
 }
