--- a/src/components/pages/artcle/Article.scss
+++ b/src/components/pages/artcle/Article.scss
@@ -1,12 +1,11 @@
 .article {
-  margin: 26px 0 64px 0;
+  margin: 26px auto 64px auto;
   min-height: 200px;
   display: flex;
   flex-direction: column;
   gap: 25px;
   padding: 16px;
   width: 938px;
-  justify-self: center;
   background-color: #fff;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.15);
 
@@ -61,80 +60,79 @@
   }
 
   @media (max-width: 957px) {
-		width: 650px;
+    width: 650px;
 
-		.article__left {
-			width: 450px;
-		}
+    .article__left {
+      width: 450px;
+    }
   }
 
   @media (max-width: 662px) {
-		width: 330px;
-		padding: 10px 11px;
-		gap: 15px;
+    width: 330px;
+    padding: 10px 11px;
+    gap: 15px;
 
-	&__change {
-		font-size: 11px;
-	}
+    &__change {
+      font-size: 11px;
+    }
 
-	&__text {
-		font-size: 12px;
-	}
-	
-	.article__header {
-		min-height: 70px;
-	}
+    &__text {
+      font-size: 12px;
+    }
 
-	&__poptext {
-		font-size: 10px;
-	}
-	
-	&__change-delete {
-		width: 50px;
-		height: 20px;
-		font-size: 11px;
-	}
+    .article__header {
+      min-height: 70px;
+    }
 
-	&__change-edit {
-		width: 50px;
-		height: 20px;
-	}
-	.article__left {
-		width: 200px;
-	}
+    &__poptext {
+      font-size: 10px;
+    }
 
-	.article__title {
-		gap: 9px;
-		font-size: 14px;
-		line-height: 22px;
-	}
+    &__change-delete {
+      width: 50px;
+      height: 20px;
+      font-size: 11px;
+    }
 
-	.article__description {
-		word-break: break-all;
-		font-size: 11px;
-		line-height: 16px;
-	}
+    &__change-edit {
+      width: 50px;
+      height: 20px;
+    }
+    .article__left {
+      width: 200px;
+    }
 
-	.article__avatar {
-		width: 40px;
-		height: 40px;
-	}
+    .article__title {
+      gap: 9px;
+      font-size: 14px;
+      line-height: 22px;
+    }
 
-	.article__tag {
-		font-size: 8px;
-	}
+    .article__description {
+      word-break: break-all;
+      font-size: 11px;
+      line-height: 16px;
+    }
 
-	.article__profile {
-		font-size: 12px;
-		display: flex;
-		flex-direction: column;
-	}
+    .article__avatar {
+      width: 40px;
+      height: 40px;
+    }
 
+    .article__tag {
+      font-size: 8px;
+    }
 
-	.article__date {
-		margin-top: -8px;
-		font-size: 9px;
-	}
+    .article__profile {
+      font-size: 12px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .article__date {
+      margin-top: -8px;
+      font-size: 9px;
+    }
   }
 }
 
