--- a/src/components/pages/artcle/Article.scss
+++ b/src/components/pages/artcle/Article.scss
@@ -32,8 +32,9 @@
     border: 1px solid #f5222d;
     color: #f5222d;
     border-radius: 5px;
-    text-align: center;
-    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: 0.5s;
     &:hover {
       transform: scale(0.9);
